# SynthEdit_SDK

./: CMakeLists.txt  SE_Modules.sln  plugin_helper.cmake
AGain/: AGain.cpp  AGain.h  AGain.htm  AGain.rc  AGain.vcxproj  AGain.vcxproj.filters  AGain.xml
BPMClock3/: BpmClock3.cpp  BpmClock3.h  BpmClock3.htm  BpmClock3.rc  BpmClock3.vcxproj  BpmClock3.vcxproj.filters  BpmClock3.xml  BpmClock4.cpp  BpmClock4.h  BpmTempo.cpp  BpmTempo.h  BpmTempo.xml.h
BoolInverter/: BoolInverter.htm  BoolInverter.rc  BoolInverter.vcxproj  BoolInverter.vcxproj.filters  BoolInverter.xml  BoolInverterGui.cpp  BoolInverterGui.h
ControlsXp/: ClassicControlGuiBase.cpp  ClassicControlGuiBase.h  Controls XP Test.se1  ControlsXp.rc  ControlsXp.vcxproj  ControlsXp.vcxproj.filters  ControlsXp.xml  CrossPlatformExamples.sln  CrossPlatformExamples.vcxproj.filters  CrossPlatformExamples.xml.h  DrawKeyboard.h  FreqAnalyser.cpp  FreqAnalyser.h  FreqAnalyserGui.cpp  FreqAnalyserGui.h  Frequency Analyser.se1  ImpulseResponse.cpp  ImpulseResponseGui.cpp  Keyboard2Gui.cpp  Keyboard2Gui.h  KeyboardMidi.cpp  KeyboardMidiGui.cpp  ListEntry.cpp  ListEntry.h  ListEntryGui.cpp  ListEntryGui.h  MidiMonitor.cpp  MidiMonitor.h  MidiMonitorGui.cpp  Monitor.cpp  MonitorGui.cpp  Scope3.cpp  Scope3.h  Scope3Gui.cpp  Scope3Gui.h  Slider.cpp  Slider.h  Slider2.cpp  Slider2.h  Slider2Gui.cpp  (+17 more)
Converters/: BoolSplitterGui.cpp  BoolSplitterGui.h  CommandTriggerGui.cpp  CommandTriggerGui.h  Converters.cpp  Converters.h  Converters.rc  Converters.vcxproj  Converters.vcxproj.filters  Converters.xml  ConvertersGui.cpp  ConvertersGui.h  FloatToText.h  (+26 more)
(+850 files in other folders)
