cmake_minimum_required(VERSION 3.15)

include(plugin_helper.cmake)

# Build individual SEM modules
add_subdirectory(Arpeggiator)
add_subdirectory(BoolInverter)
add_subdirectory(BPMClock3)
add_subdirectory(ControlsXp)
add_subdirectory(Converters)
add_subdirectory(Diagnostic)
add_subdirectory(EnvelopeAdsr)
add_subdirectory(Filters)
add_subdirectory("FIR Filters")
add_subdirectory("Guitar De Channelizer")
add_subdirectory(FloatLimiter)
add_subdirectory(ImpulseResponse)
add_subdirectory(Increment3)
add_subdirectory(Inverter)
add_subdirectory("List Combiner")
add_subdirectory("MIDI Logger")
add_subdirectory(MidiPlayer2)
add_subdirectory(NoteExpression)
# add_subdirectory(Oscillator)
add_subdirectory(OscillatorNaive)
add_subdirectory(OversamplingControl)
add_subdirectory(PatchCableDiag)
add_subdirectory(PatchMemory)
add_subdirectory(PolyphonyControl)
add_subdirectory(Reverb)
add_subdirectory("Sample Oscillator2")
add_subdirectory(SampleRate)
add_subdirectory(SoftDistortion)
add_subdirectory(SoundPipe)
add_subdirectory(Spring2)
add_subdirectory("Streaming State")
add_subdirectory(SubControls)
add_subdirectory(SubControlsXp)
add_subdirectory(Switches)
add_subdirectory("System Command")
add_subdirectory(Triggerator)
# not workin ATM add_subdirectory(Unison)
add_subdirectory(UnisonFix)
add_subdirectory(UserSetting)
add_subdirectory(VaFilters)
add_subdirectory(VoiceWatcherBlocker)
add_subdirectory(WaveRecorder2)
add_subdirectory(Waveshapers)